// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel node If it matches the snapshot 1`] = `
<div
  class="panel"
  style="top: 10px; left: 10px;"
>
  <header
    class="panel__header"
  >
    
      
    <p
      class="panel__name"
      title="name"
    >
      
        name
      
    </p>
    
      
    <a
      class="panel__link"
    >
      
        ▸
      
    </a>
    
    
  </header>
  
    
  <main
    class="panel__body "
  >
    
    
  </main>
</div>
`;

exports[`Panel node Open and close 1`] = `
<div
  class="panel"
  style="top: 10px; left: 10px;"
>
  <header
    class="panel__header"
  >
    
      
    <p
      class="panel__name"
      title="name"
    >
      
        name
      
    </p>
    
      
    <a
      class="panel__link"
    >
      ▾
    </a>
    
    
  </header>
  
    
  <main
    class="panel__body hidden"
  >
    
    
  </main>
</div>
`;

exports[`Panel node Open and close 2`] = `
<div
  class="panel"
  style="top: 10px; left: 10px;"
>
  <header
    class="panel__header"
  >
    
      
    <p
      class="panel__name"
      title="name"
    >
      
        name
      
    </p>
    
      
    <a
      class="panel__link"
    >
      ▸
    </a>
    
    
  </header>
  
    
  <main
    class="panel__body"
  >
    
    
  </main>
</div>
`;

exports[`Panel node Open and close by click 1`] = `
<div
  class="panel"
  style="top: 10px; left: 10px;"
>
  <header
    class="panel__header"
  >
    
      
    <p
      class="panel__name"
      title="name"
    >
      
        name
      
    </p>
    
      
    <a
      class="panel__link"
    >
      ▾
    </a>
    
    
  </header>
  
    
  <main
    class="panel__body hidden"
  >
    
    
  </main>
</div>
`;
